--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -1,4 +1,41 @@
-#createForm {
+body {
   display: flex;
   flex-direction: column;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+#createFormContainer,
+#updateFormContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+}
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+h1,
+h3,
+input,
+label {
+  font-family: sans-serif;
+  color: rgb(2, 2, 81);
+}
+input[type="submit"] {
+  background-color: rgb(2, 2, 81);
+  width: 30%;
+  color: white;
+  cursor: pointer;
 }
