put request works

--- a/views/update.html
+++ b/views/update.html
@@ -40,6 +40,6 @@
       </form>
     </section>
     >
-    <script src="./public/javascript/update-script.js"></script>
+    <script src="../public/javascript/update-script.js"></script>
   </body>
 </html>
