--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../public/styling/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+
     <title>Travel Destinations</title>
   </head>
   <body>
     <h1>Here will be the list of all the travel destinations</h1>
+    <div class="dest-list"></div>
+    <!-- <script src="../public/javascript/create-script.js"></script> -->
+    <script src="../public/javascript/list-script.js"></script>
+    <template id="destination-card">
+      <div class="mini-card" id="temp">
+        <h3>
+          <span id="nameDestination"></span> <span id="locationDestination"></span>
+          <button id="edit-button">
+            <i class="bi bi-pencil-fill"></i>
+          </button>
+          <button id="delete-button" onclick="deleteMe(this)">
+            <i class="bi bi-trash"></i>
+          </button>
+        </h3>
+        <p id="startDateDestination"></p>
+        <p id="endDateDestination"></p>
+        <p id="descriptionDestination"></p>
+        <p id="imgDestination"></p>
+      </div>
+    </template>
   </body>
 </html>
