--- a/views/login.html
+++ b/views/login.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up</title>
+    <title>Log in</title>
   </head>
   <body>
+    <h1>This is login</h1>
     <form>
       <label for="username">Username:</label>
       <input name="username" type="text" id="username" />
       <label for="password">Password:</label>
       <input name="password" type="text" id="password" />
-      <input type="submit" value="sign up" id="signUp" />
+      <input type="button" value="log in" id="logIn" />
     </form>
-    <script src="../public/javascript/sign-up.js"></script>
-    <script src="../app.js"></script>
+    <script type="module" src="../public/javascript/log-in.js"></script>
+    <script type="module" src="../app.js"></script>
   </body>
 </html>
