--- a/views/update.html
+++ b/views/update.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <section id="updateFormContainer">
-      <h1>Update the current post</h1>
-      <h3>Changes will be applied and showed on the main page</h3>
       <form id="updateForm">
+        <h1>Update the current post</h1>
+        <h3>(Changes will be applied and showed on the main page)</h3>
         <label for="name">
           Name:
           <input name="name" type="text" id="name" placeholder="Destination name" required />
@@ -39,7 +39,6 @@
         <input type="submit" name="submit" id="submit" value="Update" />
       </form>
     </section>
-    >
     <script src="../public/javascript/update-script.js"></script>
   </body>
 </html>
