--- a/views/update.html
+++ b/views/update.html
@@ -39,7 +39,9 @@
         <input type="submit" name="submit" id="submit" value="Update" />
       </form>
     </section>
-    >
+    <div id="confirmationModalUpdate" class="modal hidden">
+      <h1>Your travel destination was updated succesfully!</h1>
+    </div>
     <script src="../public/javascript/update-script.js"></script>
   </body>
 </html>
