--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -1,6 +1,11 @@
+
 body {
   display: flex;
   flex-direction: column;
+  background-color: #efebeb;
+  background-image: url(https://unsplash.com/photos/LcOyjcKIAao);
+  background-position: center;
+  backdrop-filter: blur(5px);
 }
 
 form {
@@ -8,7 +13,14 @@ form {
   flex-direction: column;
   width: 60%;
 }
-#createFormContainer,
+#createFormContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+}
 #updateFormContainer {
   position: absolute;
   top: 50%;
@@ -16,6 +28,7 @@ form {
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
+  
 }
 input {
   width: 100%;
@@ -25,17 +38,52 @@ input {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  
 }
-h1,
-h3,
-input,
+h1 { 
+  font-family: sans-serif;
+  color: black;
+  font-weight: 800;
+  font-size: 3rem;
+  margin: 5px -5px 15px;
+  background-color: rgb(215, 211, 211);
+
+}
+span {
+  font-family: sans-serif;text-transform: uppercase;
+  letter-spacing: 1px;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 14px;
+  color: navy;
+}
+
+p {
+  font-family: sans-serif;
+  max-width: min(40ch, 100% - 2rem);
+  line-height: 1.6;
+  color: #565656;
+}
+
+h3 {
+ display: inline-block;
+ 
+}
+
+input {
+  display: inline-block;
+  
+}
+
 label {
   font-family: sans-serif;
-  color: rgb(2, 2, 81);
+  color: navy;
 }
+
 input[type="submit"] {
-  background-color: rgb(2, 2, 81);
+  background-color:navy;
   width: 30%;
   color: white;
   cursor: pointer;
 }
+
