--- a/views/index.html
+++ b/views/index.html
@@ -5,19 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../public/styling/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <span>Top cities</span>
     <title>Travel Destinations</title>
   </head>
   <body>
-    <h1>Here will be the list of all the travel destinations</h1>
+    <h1>Our popular cities</h1>
+    <p>
+      Check out all the popular travel destinations and share your experiences.
+    </p>
     <div class="dest-list"></div>
     <!-- <script src="../public/javascript/create-script.js"></script> -->
     <script src="../public/javascript/list-script.js"></script>
     <template id="destination-card">
       <div class="mini-card" id="temp">
         <h3>
-          <span id="nameDestination"></span> <span id="locationDestination"></span>
+          <span id="nameDestination"></span>
+          <span id="locationDestination"></span>
           <button id="edit-button">
             <i class="bi bi-pencil-fill"></i>
           </button>
