--- a/views/create.html
+++ b/views/create.html
@@ -13,7 +13,7 @@
     <section id="createFormContainer">
       <h1>Create a new travel destination</h1>
       <h3>This destination will be shown on our Travel destinations main page</h3>
-      <form id="createForm">
+      <form id="createForm" enctype="multipart/form-data">
         <label for="name">
           Name:
           <input name="name" type="text" id="name" placeholder="Destination name" required />
