--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -1,18 +1,19 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'inter', sans-serif;
+  font-family: "inter", sans-serif;
 }
 
 body {
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('./bgforms.jpg');
+  background-image: url("./bgforms.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
-
 
 form {
   display: flex;
@@ -26,7 +27,6 @@ form {
   max-width: 600px;
   border-radius: 10px;
 }
-
 
 #createFormContainer,
 #updateFormContainer {
@@ -58,15 +58,14 @@ h3 {
   text-align: center;
 }
 
-
 label {
-  font-family: 'inter', sans-serif;
+  font-family: "inter", sans-serif;
   color: rgb(7, 7, 8);
 }
 
 input[type="submit"] {
   padding: 16px;
-  background:rgb(7, 7, 8);
+  background: rgb(7, 7, 8);
   color: white;
   font-size: 16px;
   border: 0;
@@ -76,5 +75,3 @@ input[type="submit"] {
   outline: none;
   cursor: pointer;
 }
-
-
