--- a/public/styling/signup.css
+++ b/public/styling/signup.css
@@ -1,78 +1,112 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'inter', sans-serif;
-  }
-  
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url('./bgforms.jpg');
-    background-repeat: no-repeat;
-    backdrop-filter: blur(3px);
-    background-position: center;
-  }
-  
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    justify-content: center;
-    background: rgb(210, 207, 206);
-    flex-direction: column;
-    padding: 2vw 4vw;
-    width: 90%;
-    max-width: 600px;
-    border-radius: 10px;
-  }
-  
-  
-  #signUpContainer {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "inter", sans-serif;
+}
 
-  
-  h1 {
-    color: rgb(7, 7, 8);
-    font-weight: 800;
-    margin-bottom: 25px;
-    text-align: center;
-  }
-  
-  form input {
-    border: 0;
-    margin: 10px 0;
-    padding: 20px;
-    outline: none;
-    background: rgb(245, 243, 243);
-    font-size: 14px;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"] {
-    padding: 16px;
-    background:rgb(7, 7, 8);
-    color: white;
-    font-size: 16px;
-    border: 0;
-    width: 120px;
-    margin: 20px 0;
-    border-radius: 30px;
-    outline: none;
-    cursor: pointer;
-    text-align: center;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  
-  
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("./bgforms.jpg");
+  background-repeat: no-repeat;
+  backdrop-filter: blur(3px);
+  background-position: center;
+  flex-direction: column;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  justify-content: center;
+  background: rgb(210, 207, 206);
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
+}
+
+#signUpContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  color: rgb(7, 7, 8);
+  font-weight: 800;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+form input {
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  background: rgb(245, 243, 243);
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  padding: 16px;
+  background: rgb(7, 7, 8);
+  color: white;
+  font-size: 16px;
+  border: 0;
+  width: 120px;
+  margin: 20px 0;
+  border-radius: 30px;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+#navigation {
+  align-self: baseline;
+}
+input:not(:focus):placeholder-shown {
+  background-color: white;
+  border-color: blue;
+}
+input[type="date"]:not(:focus):invalid {
+  border-color: blue;
+  background-color: white;
+}
+input:focus:placeholder-shown:invalid {
+  background-color: white;
+  border-color: blue;
+}
+input:focus {
+  background-color: rgba(36, 98, 146, 0.409);
+}
+
+input:invalid {
+  border-color: #900;
+  background-color: #fdd;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+.error {
+  width: 100%;
+  padding: 0;
+  margin-top: 1rem;
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+  box-sizing: border-box;
+}
+.error.active {
+  padding: 0.3em;
+}
