--- a/views/login.html
+++ b/views/login.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../public/styling/style.css" />
+
     <link rel="stylesheet" type="text/css" href="../public/styling/login.css" />
     <title>Log in</title>
   </head>
   <body>
+    <section id="navigation">
+      <button id="home">Home</button>
+      <button id="signUpBtn">Sign up</button>
+      <button id="create">Create</button>
+      <button id="logInBtn">Log in</button>
+    </section>
     <div class="background-image">
-        <section id="signInContainer">
-            <form>
-              <h1>Log in</h1>
-              <label for="username">Username:</label>
-              <input name="username" type="text" id="username" placeholder="Username" required />
-              <label for="password">Password:</label>
-              <input name="password" type="text" id="password" placeholder="Password" required />
-              <input type="submit" value="Log in" id="logIn" />
-            </form>
-        </section>
+      <section id="signInContainer">
+        <form>
+          <h1>Log in</h1>
+          <label for="username">Username:</label>
+          <input name="username" type="text" id="username" placeholder="Username" required />
+          <label for="password">Password:</label>
+          <input name="password" type="text" id="password" placeholder="Password" required />
+          <input type="submit" value="Log in" id="logIn" />
+        </form>
+      </section>
     </div>
+    <script src="/public/javascript/navigation.js"></script>
+
     <script type="module" src="../public/javascript/log-in.js"></script>
     <script type="module" src="../app.js"></script>
   </body>
