--- a/views/login.html
+++ b/views/login.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="../public/styling/login.css" />
     <title>Log in</title>
   </head>
+  <div class="header">
+    <div class="inner_header">
+    <div class="logo_container">
+        <img src="./logo.png" alt="logo"/>
+        <h2>my travel journal.</h2>
   <body>
     <div class="background-image">
         <section id="signInContainer">
@@ -19,6 +24,9 @@
               <input type="submit" value="Log in" id="logIn" />
             </form>
         </section>
+      </div>
+      </div>
+      </div>
     </div>
     <script type="module" src="../public/javascript/log-in.js"></script>
     <script type="module" src="../app.js"></script>
