--- a/views/signup.html
+++ b/views/signup.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="../public/styling/signup.css" />
     <title>Sign up</title>
   </head>
+    <div class="header">
+    <div class="inner_header">
+    <div class="logo_container">
+        <img src="./logo.png" alt="logo"/>
+        <h2>my travel journal.</h2>
   <body>
     <section id="signUpContainer">
     <form>
@@ -24,6 +29,9 @@
       <input type="submit" value="Sign up" id="signUp" />
     </form>
     </section>
+      </div>
+      </div>
+      </div>
     <script src="../public/javascript/sign-up.js"></script>
     <script src="../app.js"></script>
   </body>
