--- a/views/update.html
+++ b/views/update.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="../public/styling/style.css" />
     <title>Update</title>
   </head>
+  <div class="header">
+    <div class="inner_header">
+    <div class="logo_container">
+      <img src="./logo.png" alt="logo"/>
+      <h2>my travel journal.</h2>
   <body>
     <section id="updateFormContainer">
       <form id="updateForm">
@@ -39,6 +44,9 @@
         <input type="submit" name="submit" id="submit" value="Update" />
       </form>
     </section>
+    </div>
+    </div>
+    </div>
     <script src="../public/javascript/update-script.js"></script>
   </body>
 </html>
