--- a/public/styling/login.css
+++ b/public/styling/login.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     width: 60%;
     justify-content: center;
-    background: rgb(210, 207, 206);
+    background: #ffffff;
     flex-direction: column;
     padding: 2vw 4vw;
     width: 90%;
@@ -31,13 +31,14 @@
   
   #signInContainer {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     display: flex;
-    align-items: center;
+    position: absolute;
+    top: 170%;
+    left: 0px;
     justify-content: center;
   }
 
-  
   
   input {
     width: 100%;
@@ -49,6 +50,7 @@
     box-sizing: border-box;
   }
   
+
   h1 {
     color: rgb(7, 7, 8);
     font-weight: 800;
@@ -65,9 +67,10 @@
     font-size: 14px;
   }
   
+
   input[type="submit"] {
     padding: 16px;
-    background:rgb(7, 7, 8);
+    background: #f5595a;
     color: white;
     font-size: 16px;
     border: 0;
@@ -81,6 +84,39 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+  }
+  
+  .header {
+    width: 100%;
+    height: 80px;
+    display: block;
+    background-color: #f5595a;
+  }
+  
+  .inner_header {
+    width: 100opx;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .logo_container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .logo_container h2 {
+    color: white;
+    text-align: center;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-family: 'inter', sans-serif;
+    font-size: 15px;
+    margin-top: 60px;
+    margin-left: 10px;
   }
   
   
