--- a/public/styling/signup.css
+++ b/public/styling/signup.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    padding: 0;
     font-family: 'inter', sans-serif;
   }
   
@@ -17,10 +16,8 @@
   
   form {
     display: flex;
-    flex-direction: column;
-    width: 60%;
     justify-content: center;
-    background: rgb(210, 207, 206);
+    background: #ffffff;
     flex-direction: column;
     padding: 2vw 4vw;
     width: 90%;
@@ -28,16 +25,14 @@
     border-radius: 10px;
   }
   
-  
   #signUpContainer {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
-    align-items: center;
+    position: absolute;
+    top: 150%;
     justify-content: center;
   }
-  
-
   
   h1 {
     color: rgb(7, 7, 8);
@@ -58,7 +53,7 @@
   
   input[type="submit"] {
     padding: 16px;
-    background:rgb(7, 7, 8);
+    background:#f5595a;
     color: white;
     font-size: 16px;
     border: 0;
@@ -72,6 +67,39 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+  }
+  
+  .header {
+    width: 100%;
+    height: 80px;
+    display: block;
+    background-color: #f5595a;
+  }
+  
+  .inner_header {
+    width: 100opx;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .logo_container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .logo_container h2 {
+    color: white;
+    text-align: center;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-family: 'inter', sans-serif;
+    font-size: 15px;
+    margin-top: 60px;
+    margin-left: 10px;
   }
   
   
