--- a/views/create.html
+++ b/views/create.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" type="text/css" href="../public/styling/create.css" />
     <title>Travel Destinations</title>
   </head>
+  <div class="header">
+  <div class="inner_header">
+  <div class="logo_container">
+    <img src="./logo.png" alt="logo"/>
+    <h2>my travel journal.</h2>
   <body>
     <section id="createFormContainer">
       <form id="createForm">
         <h1>Create a new travel destination</h1>
-      <h3>(This destination will be shown on our Travel destinations main page)</h3>
+        <h3>(This destination will be shown on our Travel destinations main page)</h3>
         <label for="name">
           Name:
           <input name="name" type="text" id="name" placeholder="Destination name" required />
@@ -40,6 +45,9 @@
         <input type="submit" name="submit" id="submit" value="Create" />
       </form>
     </section>
+  </div>
+  </div>
+  </div>
   </body>
   <script src="/public/javascript/create-script.js"></script>
 </html>
