--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('./bgforms.jpg');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -47,7 +46,9 @@ form input {
   outline: none;
   border-radius: 4px;
   box-sizing: border-box;
-  background: rgb(245, 243, 243);
+  border: 0.5px;
+  border-style: solid;
+  border-color: #f5595a;
 }
 
 h1,
