--- a/views/create.html
+++ b/views/create.html
@@ -34,12 +34,15 @@
           Description:
           <input name="description" type="textarea" id="description" placeholder="Description of the place" required />
         </label>
-        <label for="img">
+     
+        <!-- <label for="img">
           Image:
           <input name="img" type="file" id="img" placeholder="Upload your image" />
-        </label>
+        </label> -->
         <input type="submit" name="submit" id="submit" value="Create" />
       </form>
+
+
     </section>
   </body>
   <script src="/public/javascript/create-script.js"></script>
