--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
         <p id="startDateDestination"></p>
         <p id="endDateDestination"></p>
         <p id="descriptionDestination"></p>
-        <p id="imgDestination"></p>
+        <img id="imgDestination"/>
       </div>
     </template>
   </body>
