--- a/views/login.html
+++ b/views/login.html
@@ -15,15 +15,28 @@
       <button id="signUpBtn">Sign up</button>
       <button id="create">Create</button>
       <button id="logInBtn">Log in</button>
+      <button id="logOutBtn">Log out</button>
     </section>
     <div class="background-image">
       <section id="signInContainer">
         <form>
           <h1>Log in</h1>
           <label for="username">Username:</label>
-          <input name="username" type="text" id="username" placeholder="Username" required />
+          <input
+            name="username"
+            type="text"
+            id="username"
+            placeholder="Username"
+            required
+          />
           <label for="password">Password:</label>
-          <input name="password" type="text" id="password" placeholder="Password" required />
+          <input
+            name="password"
+            type="text"
+            id="password"
+            placeholder="Password"
+            required
+          />
           <input type="submit" value="Log in" id="logIn" />
         </form>
       </section>
@@ -31,6 +44,7 @@
     <script src="/public/javascript/navigation.js"></script>
 
     <script type="module" src="../public/javascript/log-in.js"></script>
+    <script src="/public/javascript/log-out.js"></script>
     <script type="module" src="../app.js"></script>
   </body>
 </html>
