--- a/views/update.html
+++ b/views/update.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../public/styling/style.css" />
-    <link rel="stylesheet" type="text/css" href="../public/styling/create-update.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../public/styling/create-update.css"
+    />
 
     <title>Update</title>
   </head>
@@ -15,6 +19,7 @@
       <button id="signUpBtn">Sign up</button>
       <button id="create">Create</button>
       <button id="logInBtn">Log in</button>
+      <button id="logOutBtn">Log out</button>
     </section>
     <section id="updateFormContainer">
       <form id="updateForm" novalidate>
@@ -22,25 +27,55 @@
         <h3>(Changes will be applied and showed on the main page)</h3>
         <label for="name">
           Name:
-          <input name="name" type="text" id="name" placeholder="Destination name" required />
+          <input
+            name="name"
+            type="text"
+            id="name"
+            placeholder="Destination name"
+            required
+          />
           <span class="error" aria-live="polite"></span>
         </label>
         <label for="location">
           Location:
-          <input name="location" type="text" id="location" placeholder="Location" required />
+          <input
+            name="location"
+            type="text"
+            id="location"
+            placeholder="Location"
+            required
+          />
           <span class="error" aria-live="polite"></span>
         </label>
         <label for="startDate">
           Start Date:
-          <input name="startDate" type="date" id="startDate" placeholder="Start date" required />
+          <input
+            name="startDate"
+            type="date"
+            id="startDate"
+            placeholder="Start date"
+            required
+          />
         </label>
         <label for="endDate">
           End Date:
-          <input name="endDate" type="date" id="endDate" placeholder="End date" required />
+          <input
+            name="endDate"
+            type="date"
+            id="endDate"
+            placeholder="End date"
+            required
+          />
         </label>
         <label for="description">
           Description:
-          <input name="description" type="textarea" id="description" placeholder="Description of the place" required />
+          <input
+            name="description"
+            type="textarea"
+            id="description"
+            placeholder="Description of the place"
+            required
+          />
           <span class="error" aria-live="polite"></span>
         </label>
 
@@ -51,6 +86,7 @@
       <h1>Your travel destination was updated succesfully!</h1>
     </div>
     <script src="/public/javascript/navigation.js"></script>
+    <script src="/public/javascript/log-out.js"></script>
 
     <script src="../public/javascript/update-script.js"></script>
   </body>
