--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../public/styling/deletthis.css"
+    />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
 
     <title>Travel Destinations</title>
   </head>
@@ -15,6 +23,7 @@
       <button id="signUpBtn">Sign up</button>
       <button id="create">Create</button>
       <button id="logInBtn">Log in</button>
+      <button id="logOutBtn">Log out</button>
     </section>
     <h1>Here will be the list of all the travel destinations</h1>
     <div class="dest-list"></div>
@@ -22,11 +31,12 @@
     <template id="destination-card">
       <div class="mini-card" id="temp">
         <h3>
-          <span id="nameDestination"></span> <span id="locationDestination"></span>
-          <button id="edit-button">
+          <span id="nameDestination"></span>
+          <span id="locationDestination"></span>
+          <button id="edit-button" class="hideBtn">
             <i class="bi bi-pencil-fill"></i>
           </button>
-          <button id="delete-button" onclick="deleteMe(this)">
+          <button id="delete-button" class="hideBtn" onclick="deleteMe(this)">
             <i class="bi bi-trash"></i>
           </button>
         </h3>
@@ -38,5 +48,6 @@
     </template>
     <script src="/public/javascript/navigation.js"></script>
     <script src="../public/javascript/list-script.js"></script>
+    <script src="/public/javascript/log-out.js"></script>
   </body>
 </html>
