--- a/views/login.html
+++ b/views/login.html
@@ -7,25 +7,38 @@
     <link rel="stylesheet" type="text/css" href="../public/styling/login.css" />
     <title>Log in</title>
   </head>
-  <div class="header">
-    <div class="inner_header">
-    <div class="logo_container">
-        <img src="./logo.png" alt="logo"/>
-        <h2>my travel journal.</h2>
+
   <body>
-    <div class="background-image">
-        <section id="signInContainer">
-            <form>
-              <h1>Log in</h1>
-              <label for="username">Username:</label>
-              <input name="username" type="text" id="username" placeholder="Username" required />
-              <label for="password">Password:</label>
-              <input name="password" type="text" id="password" placeholder="Password" required />
-              <input type="submit" value="Log in" id="logIn" />
-            </form>
-        </section>
-      </div>
-      </div>
+    <div class="header">
+      <div class="inner_header">
+        <div class="logo_container">
+          <img src="./logo.png" alt="logo" />
+          <h2>my travel journal.</h2>
+          <div class="background-image">
+            <section id="signInContainer">
+              <form>
+                <h1>Log in</h1>
+                <label for="username">Username:</label>
+                <input
+                  name="username"
+                  type="text"
+                  id="username"
+                  placeholder="Username"
+                  required
+                />
+                <label for="password">Password:</label>
+                <input
+                  name="password"
+                  type="text"
+                  id="password"
+                  placeholder="Password"
+                  required
+                />
+                <input type="submit" value="Log in" id="logIn" />
+              </form>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="../public/javascript/log-in.js"></script>
