--- a/views/create.html
+++ b/views/create.html
@@ -13,13 +13,24 @@
     <title>Travel Destinations</title>
   </head>
   <body>
-    <section id="navigation">
-      <button id="home">Home</button>
-      <button id="signUpBtn">Sign up</button>
-      <button id="create">Create</button>
-      <button id="logInBtn">Log in</button>
-      <button id="logOutBtn">Log out</button>
-    </section>
+    <div class="navigation">
+      <section id="navigatio_buttons">
+        <button id="home" class="nav">Home</button>
+        <button id="signUpBtn" class="nav">Sign up</button>
+        <button id="create" class="nav">Create</button>
+        <button id="logInBtn" class="nav">Log in</button>
+        <button id="logOutBtn" class="nav">Log out</button>
+        </section>
+        
+        <section class="logo">
+        <div class="img">
+          <img src="../public/styling/images/loco.svg"/>
+          </div>
+          <h1>my travel journal.</h1>
+        </section>
+         
+      </div>
+      
     <section id="content">
       <div id="createFormContainer">
         <form id="createForm" novalidate>
