--- a/public/styling/login.css
+++ b/public/styling/login.css
@@ -4,29 +4,22 @@
   font-family: "inter", sans-serif;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: url("./bgforms.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  backdrop-filter: blur(2px);
-}
+
+
 
 form {
   display: flex;
   flex-direction: column;
-  width: 60%;
   justify-content: center;
-  background: rgb(210, 207, 206);
-  flex-direction: column;
-  padding: 2vw 4vw;
-  width: 90%;
-  max-width: 600px;
+  border: 2px solid #F55A5A;
+  padding: 5vw 4vw;
+  width: 50%;
+  height: auto;
   border-radius: 10px;
 }
+
+
+
 
 #signInContainer {
   width: 100%;
@@ -41,7 +34,8 @@ input {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 0.9px solid rgb(100, 100, 100);
+  border: 2px solid rgb(210, 207, 206) !important;
+  outline: none;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -54,31 +48,23 @@ h1 {
 }
 
 form input {
-  border: 0;
   margin: 10px 0;
   padding: 20px;
   outline: none;
-  background: rgb(245, 243, 243);
+  background: transparent;
   font-size: 14px;
 }
 
 input[type="submit"] {
   padding: 16px;
-  background: rgb(7, 7, 8);
-  color: white;
-  font-size: 16px;
-  border: 0;
-  width: 120px;
-  margin: 20px 0;
-  border-radius: 30px;
-  outline: none;
-  cursor: pointer;
-  text-align: center;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+    background: rgb(7, 7, 8);
+    color: white;
+    font-size: 16px;
+    border: 0;
+    width: 120px;
+    margin: 20px 0;
+    border-radius: 30px;
+    outline: none;
+
 }
-#navigation {
-  align-self: baseline;
-}
+
