--- a/public/styling/signup.css
+++ b/public/styling/signup.css
@@ -1,30 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "inter", sans-serif;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("./bgforms.jpg");
-  background-repeat: no-repeat;
-  backdrop-filter: blur(3px);
-  background-position: center;
-  flex-direction: column;
-}
 
 form {
   display: flex;
   flex-direction: column;
-  width: 60%;
   justify-content: center;
-  background: rgb(210, 207, 206);
-  flex-direction: column;
-  padding: 2vw 4vw;
-  width: 90%;
-  max-width: 600px;
+  border: 2px solid #F55A5A;
+  padding: 3vw 4vw;
+  width: 50%;
+  height: auto;
   border-radius: 10px;
 }
 
@@ -53,26 +35,19 @@ form input {
   border-radius: 4px;
 }
 
-input[type="submit"] {
-  padding: 16px;
-  background: rgb(7, 7, 8);
-  color: white;
-  font-size: 16px;
-  border: 0;
-  width: 120px;
-  margin: 20px 0;
-  border-radius: 30px;
-  outline: none;
-  cursor: pointer;
-  text-align: center;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-#navigation {
-  align-self: baseline;
-}
+
+  input[type="submit"] {
+    padding: 16px;
+      background: rgb(7, 7, 8);
+      color: white;
+      font-size: 16px;
+      border: 0;
+      width: 120px;
+      margin: 20px 0;
+      border-radius: 30px;
+      outline: none;
+  
+  }
 input:not(:focus):placeholder-shown {
   background-color: white;
   border-color: blue;
