--- a/views/update.html
+++ b/views/update.html
@@ -14,13 +14,23 @@
     <title>Update</title>
   </head>
   <body>
-    <section id="navigation">
-      <button id="home">Home</button>
-      <button id="signUpBtn">Sign up</button>
-      <button id="create">Create</button>
-      <button id="logInBtn">Log in</button>
-      <button id="logOutBtn">Log out</button>
-    </section>
+    <div class="navigation">
+      <section id="navigatio_buttons">
+        <button id="home" class="nav">Home</button>
+        <button id="signUpBtn" class="nav">Sign up</button>
+        <button id="create" class="nav">Create</button>
+        <button id="logInBtn" class="nav">Log in</button>
+        <button id="logOutBtn" class="nav">Log out</button>
+        </section>
+        
+        <section class="logo">
+        <div class="img">
+          <img src="../public/styling/images/loco.svg"/>
+          </div>
+          <h1>my travel journal.</h1>
+        </section>
+         
+      </div>
     <section id="updateFormContainer">
       <form id="updateForm" novalidate>
         <h1>Update the current post</h1>
